--- a/css/style.css
+++ b/css/style.css
@@ -9,35 +9,56 @@
     list-style: none;
     text-transform: capitalize;
     font-family: "Poppins",sans-serif;
+    
 }
 html, body { 
-    scroll-behavior: smooth
+    scroll-behavior: smooth;
   }
 
-input::selection {
-    background-color: #161616;
+  section.home div.container h1::selection,
+  section.home div.container h2::selection,
+  section.skills .container div:hover h5::selection,  
+  section.skills .container div:hover p::selection,
+  section.projects h2::selection,
+  section.projects p::selection,
+  section.projects .container .fst-pro .link-2::selection,
+  section.projects .container div.fst-pro a.link-1 img::selection,
+  section.contact div.container img::selection,
+  section.home div.container a.button::selection,
+  div.container ul li a::selection,
+  footer h2::selection,
+  footer .container .social-media-icons::selection,
+  footer p::selection,
+  footer .container p span::selection,
+  section.skills .container div img::selection,
+  section.about .container figure img::selection
+  {
+    background-color: #fff;
+    color: #161616;
+  }
+  .toUp img::selection
+   {
+    background-color: #07ff41;
     color: white;
-}
-::selection {
+  }
+  section.home div.container h2 span::selection{
     background-color: white;
     color: #161616;
-}
-section.skills .container p::selection,
-section.skills .container h5::selection,
-section.skills h2::selection,
-section.skills p.info::selection,
-section.contact h2::selection,
-textarea::selection,
-section.about h2::selection,
-section.about p::selection{
+  }
+  section.about h2::selection ,
+  section.about .container p::selection,
+  section.skills h2::selection,
+  section.skills p.info::selection,
+  section.skills .container div h5::selection,  
+  section.skills .container div p::selection,
+  section.projects .container .fst-pro .link-2:hover::selection,
+  section.contact h2::selection,
+  section.contact div.container input::selection,
+  textarea::selection {
     background-color: #161616;
-    color: white;
-}
-section.skills .container div:hover h5::selection,
-section.skills .container div:hover p::selection {
-    background-color: white;
-    color: #161616;
-}
+    color: #fff;
+  }
+
 ::-webkit-scrollbar {
     width: 10px;
 }
@@ -57,7 +78,7 @@ section.skills .container div:hover p::selection {
 ::-webkit-scrollbar-track {
     background-color: #161616;
 }
-/* Very Small devices (0, 575px */
+/* Very Small devices (0, 575px )*/
 @media (min-width:0) and (max-width:575px) {
     
      .container  {
@@ -71,9 +92,6 @@ section.skills .container div:hover p::selection {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         grid-gap: 20px;
-    }
-    ul {
-        display: none;
     }
     section.skills .container div img {
         width: 85px;
@@ -91,7 +109,35 @@ section.skills .container div:hover p::selection {
     section.contact div.container img {
         display: none;
     }
-   
+    .logo {
+        font-size: 1.3em !important;
+    }
+    .burger i {
+        display: block;
+        position: relative;
+        font-size: 1.5em;
+        cursor: pointer;
+    }
+    .burger i:hover {
+        background-color: transparent;
+    }
+    .burger ul  {
+        display: none;
+        position: absolute;
+        left: 50%;
+        background-color: #161616;
+        z-index: 9999;
+        top: 83px;
+    }
+    .burger ul li {
+        display: block !important;
+        padding: 10px !important;
+       
+    }
+    .burger ul li a {
+        display: block;
+        padding: 5px !important;
+    }
 }
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) and (max-width: 767px){ 
@@ -105,9 +151,6 @@ section.skills .container div:hover p::selection {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         grid-gap: 20px;
-    }
-    ul {
-        display: none;
     }
     section.skills .container div img {
         width: 85px;
@@ -126,6 +169,32 @@ section.skills .container div:hover p::selection {
     section.contact div.container img {
         display: none;
     }
+    .burger i {
+        display: block;
+        position: relative;
+        font-size: 2em;
+        cursor: pointer;
+    }
+    .burger i:hover {
+        background-color: transparent;
+    }
+    .burger ul  {
+        display: none ;
+        position: absolute;
+        left: 70%;
+        background-color: #161616;
+        z-index: 9999;
+        top: 83px;
+    }
+    .burger ul li {
+        display: block !important;
+        padding: 10px !important;
+       
+    }
+    .burger ul li a {
+        display: block;
+        padding: 5px !important;
+    }
     
 }
 
@@ -141,9 +210,7 @@ section.skills .container div:hover p::selection {
         grid-gap: 20px;
     }
     
-    ul {
-        display: none;
-    }
+    
     section.skills .container div img {
         width: 85px;
         position: absolute;
@@ -156,7 +223,33 @@ section.skills .container div:hover p::selection {
     section.contact div.container img {
         display: none;
     }
-
+    .burger i {
+        display: block;
+        position: relative;
+        font-size: 2em;
+        cursor: pointer;
+    }
+    .burger i:hover {
+        background-color: transparent;
+    }
+    .burger ul  {
+        display: none ;
+        position: absolute;
+        left: 70%;
+        background-color: #161616;
+        z-index: 9999;
+        top: 83px;
+    }
+    .burger ul li {
+        display: block !important;
+        padding: 10px !important;
+       
+    }
+    .burger ul li a {
+        display: block;
+        padding: 5px !important;
+    }
+    
 }
 
 /*  Large devices (desktops, 992px and up) */
@@ -170,9 +263,7 @@ section.skills .container div:hover p::selection {
         flex-wrap: wrap;
         width: 60%;
     }
-    ul {
-        display: none;
-    }
+    
     section.skills .container div img {
         width: 85px;
         position: absolute;
@@ -186,6 +277,35 @@ section.skills .container div:hover p::selection {
     section.contact div.container {
         justify-content: center;
     }
+    
+    .burger i {
+        display: block;
+        position: relative;
+        font-size: 2em;
+        cursor: pointer;
+    }
+    .burger i:hover {
+        background-color: transparent;
+    }
+    .burger ul  {
+        display: none ;
+        position: absolute;
+        left: 70%;
+        background-color: #161616;
+        z-index: 9999;
+        top: 83px;
+    }
+    .burger ul li {
+        display: block !important;
+        padding: 10px !important;
+       
+    }
+    .burger ul li a {
+        display: block;
+        padding: 5px !important;
+    }
+    
+
  }
 
 /*  X-Large devices (large desktops, 1200px and up) */
@@ -209,7 +329,9 @@ section.skills .container div:hover p::selection {
         align-self: flex-start;
         
     }
-    
+    .burger i {
+        display: none;
+    }
 }
 
 /* XX-Large devices (larger desktops, 1400px and up) */
@@ -244,17 +366,17 @@ section.skills .container div:hover p::selection {
         background-color: #161616;
         height: 30vh;
     }
+    .burger i {
+        display: none;
+    }
  }
 
  /* End General CSS */
  /* Start Header */
  header {
     background-color: #161616;
-    position: fixed;
-    width: 100%;
-    top: 0;
     padding: 20px;
-    z-index: 999;
+    
 }
     div.container {
         display: flex;
@@ -313,8 +435,7 @@ div.container a.logo:hover {
     section.home {
         background-color: #161616;
         width: 100%;
-        clip-path:polygon(0% 0%, 100% 0%, 100% 80%,0% 100%, 0 100%);
-
+        clip-path: polygon(0% 0%, 100% 0%, 100% 100%,0% 80%, 0 100%);
 }
     section.home div.container {
         display:flex;
@@ -448,6 +569,11 @@ section.projects {
         margin-bottom: 30px;
         
     }
+    section.projects .container {
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+    }
     section.projects .container div {
         display: flex;
         flex-direction: column;
@@ -463,7 +589,7 @@ section.projects {
         position: relative;
 }
     section.projects .container div.fst-pro a.link-1 img {
-        width: 230px;
+        width: 220px;
         margin-bottom: 10px;
         transition: all 0.3s ease;
         -webkit-transition: all 0.3s ease;
@@ -602,6 +728,36 @@ footer p {
     font-size: 1.1em;
 }
 /* End Footer */
+/* arrow */
+.toUp {
+    display: none;
+}
+.toUp  {
+    background-color: #FFF;
+    width: 50px;
+    position: fixed;
+    text-align: center;
+    bottom: 20px;
+    right: 40px;
+    border-radius: 40px;
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    -ms-border-radius: 40px;
+    -o-border-radius: 40px;
+}
+.toUp img {
+    width: 45px;
+
+}
+.toUp {
+    cursor: pointer;
+}
+.appear {
+    display: block !important;
+}
+.active {
+    display: block !important;
+}
 
 
 
